WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145735
REGRESSION(
r185262
): [GTK] webkit_web_context_set_disk_cache_directory() doesn't work after
r185262
https://bugs.webkit.org/show_bug.cgi?id=145735
Summary
REGRESSION(r185262): [GTK] webkit_web_context_set_disk_cache_directory() does...
Carlos Garcia Campos
Reported
2015-06-07 03:45:49 PDT
We need way to change the web process pool configuration, and also move to the UI process the disk cache subdirectory handling. This is an API break, because webkit_web_context_set_disk_cache_directory() does nothing now.
Attachments
Patch
(7.22 KB, patch)
2015-06-07 03:51 PDT
,
Carlos Garcia Campos
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-06-07 03:51:44 PDT
Created
attachment 254435
[details]
Patch The shared secondary process model is still broken, but because of
r185251
.
WebKit Commit Bot
Comment 2
2015-06-07 03:52:38 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3
2015-06-07 23:36:08 PDT
Committed
r185311
: <
http://trac.webkit.org/changeset/185311
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug